# ddpa_lines_ng

./: README.md  pyproject.toml  requirements.txt
libs/: charters_seg.py  download_utils.py  seg_io.py  seglib.py  segviz.py  transforms.py
masks_crnn/: line_detect_train.py  train.py
masks_crnn/libs/: seglib.py  segviz.py
masks_crnn/tests/: test_metrics.py
tests/: test_metrics.py
yolo/: word_detect.py  words.yaml
yolo/segment/: line_segment.py  line_segment_from_scratch.py  lines.yaml  train_1280-640.yaml  train_640.yaml  yolov8n-seg_best.pt
